workspace = { members = ["adder"] }
[package]
name = "second"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "linked_list"
path = "src/linked_list.rs"

[[bin]]
name = "struct"
path = "src/struct.rs"

[[bin]]
name = "quick_sort"
path = "src/quick_sort.rs"

[[bin]]
name = "match"
path = "src/match.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "async"
path = "src/async.rs"

[[bin]]
name = "database"
path = "src/database.rs"

[[bin]]
name = "generics"
path = "src/generics.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

[[bin]]
name = "tcp"
path = "src/tcp.rs"

[[bin]]
name = "life_time"
path = "src/life_time.rs"

[[bin]]
name = "smart_pointers"
path = "src/smart_pointers.rs"

[[bin]]
name = "ref_cell"
path = "src/ref_cell.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "leet_code"
path = "src/leet_code.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
diesel = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"
cargo-watch = "8.5.2"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql"] }
chrono = "0.4"
rust_decimal = "1.34"
rust_decimal_macros = "1.34"
bigdecimal = "0.4.2"
dotenv = "0.15.0"
